# trane-music

./: .gitignore  CONTRIBUTING.md  Cargo.toml  Makefile  README.md
courses/advanced_guitar_fretboard/: course_manifest.json
courses/basic_guitar_fretboard/: course_manifest.json
courses/earmaster_chord_identification/: course_manifest.json  instructions.md
courses/earmaster_chord_inversions/: course_manifest.json  instructions.md
courses/earmaster_chord_progressions/: course_manifest.json  instructions.md
courses/earmaster_error_detection/: course_manifest.json  instructions.md
courses/earmaster_interval_identification/: course_manifest.json  instructions.md
courses/earmaster_interval_singing/: course_manifest.json  instructions.md
courses/earmaster_melody_dictation/: course_manifest.json  instructions.md
courses/earmaster_melody_sight_singing/: course_manifest.json  instructions.md
courses/earmaster_melody_singback/: course_manifest.json  instructions.md
courses/earmaster_rhythm_clapback/: course_manifest.json  instructions.md
courses/earmaster_rhythm_dictation/: course_manifest.json  instructions.md
courses/earmaster_rhythm_sight_reading/: course_manifest.json  instructions.md
courses/earmaster_scale_identification/: course_manifest.json  instructions.md
courses/major_pentatonic_scale/: course_manifest.json
courses/major_scale/: course_manifest.json
courses/minor_pentatonic_scale/: course_manifest.json
courses/minor_scale/: course_manifest.json
src/: earmaster.rs  guitar.rs  main.rs  theory.rs
src/earmaster/: chord_identification.rs  (+12 more)
(+7581 files in other folders)
