[package]
name = "trane-music"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.57"
indoc = "1.0"
lazy_static = "1.4.0"
trane = "0.3.5"
ustr = { version = "0.9.0", features = ["serialization"] }

# Commented out for use for local development.
# trane = { path = "../trane" }

[dev-dependencies]
tempfile = "3.3.0"
