[package]
name = "trane-music"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.57"
indoc = "1.0"
lazy_static = "1.4.0"
trane = "0.15.4"
ustr = { version = "0.9.0", features = ["serialization"] }

# Commented out for use for local development.
# trane = { path = "../trane" }

[dev-dependencies]
fs_extra = "1.3.0"
tempfile = "3.4.0"
